Tercera Entrega Fantastic v1.3

--- a/index.html
+++ b/index.html
@@ -140,10 +140,10 @@
 
     <h2 class="subtitulo-video-index"> Y si...</h2>
     <div class="video-index">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/-iB6w-doZbY?controls=0"
+      <iframe src="https://www.youtube.com/embed/-iB6w-doZbY?controls=1"
         title="YouTube video player" frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        allowfullscreen></iframe>
+        allowfullscreen class="video-history"></iframe>
     </div>
 
 
