Tercera Entrega Fantastic v1.5

--- a/pages/aireycielo.html
+++ b/pages/aireycielo.html
@@ -63,7 +63,7 @@
     </div>
     <div class="container-all">
       <img src="../img/fenix-aire-cielo.jpg" alt="imagen de un ave fenix en una explosion de color y arco iris en el cielo">
-      <h2 class="subtitulo-tierra-agua">Ave Fenix, Dioses de la eternidad</h2>
+      <h2 class="subtitulo-tierra-agua">Fenix, Dios de la eternidad</h2>
       <p>El ave fénix es una criatura mitológica legendaria que se originó en la mitología griega. Según la leyenda, el ave fénix es un pájaro que vive durante varios siglos y luego se quema en una hoguera, solo para renacer de sus cenizas con una nueva vida. Esta capacidad de renacer de las cenizas la hace un símbolo de la inmortalidad y la resurrección. La descripción del ave fénix varía en diferentes culturas, pero generalmente se la representa como un ave grande y majestuosa, con plumas brillantes y enrojecidas, una cola larga y un pico curvado. Según algunas leyendas, el ave fénix tenía la capacidad de sanar con lágrimas curativas y su canto era una hermosa melodía que podía levantar el espíritu de cualquiera que lo escuchara. El ave fénix se ha convertido en un símbolo popular en muchas culturas y es a menudo utilizado como un símbolo de renacimiento y esperanza. Su historia ha sido contada en muchos cuentos y obras de ficción, y se ha utilizado en muchas ocasiones para representar la idea de que, aunque algo puede parecer muerto o perdido, siempre hay una posibilidad de que pueda renacer y volver a la vida.</p>
     </div>
     <div class="container-all">
