--- a/index.html
+++ b/index.html
@@ -162,10 +162,10 @@
       <div class="box">
         <h2>SIGUENOS</h2>
         <div class="red-social">
-          <a href="#" class="fa fa-facebook"></a>
-          <a href="#" class="fa fa-instagram"></a>
-          <a href="#" class="fa fa-twitter"></a>
-          <a href="#" class="fa fa-youtube"></a>
+          <a href="https://www.facebook.com/" target="_blank" class="fa fa-facebook"></a>
+          <a href="https://www.instagram.com/" target="_blank" class="fa fa-instagram"></a>
+          <a href="https://twitter.com/" target="_blank" class="fa fa-twitter"></a>
+          <a href="https://www.youtube.com/" target="_blank" class="fa fa-youtube"></a>
         </div>
       </div>
     </div>
@@ -178,7 +178,7 @@
 
 
   <button class="volver-arriba">
-    <a href="index.html" class="estilo-boton">Volver arriba</a>
+    <a href="#" class="estilo-boton">Volver arriba</a>
     <!-- <audio controls autoplay> -->
     <source src="img/Westworld.mp3" type="audio/mpeg">
     <source src="img/Westworld.ogg" type="audio/ogg">
