--- a/pages/historias.html
+++ b/pages/historias.html
@@ -137,10 +137,10 @@
       <div class="box">
         <h2>SIGUENOS</h2>
         <div class="red-social">
-          <a href="#" class="fa fa-facebook"></a>
-          <a href="#" class="fa fa-instagram"></a>
-          <a href="#" class="fa fa-twitter"></a>
-          <a href="#" class="fa fa-youtube"></a>
+          <a href="https://www.facebook.com/" target="_blank" class="fa fa-facebook"></a>
+          <a href="https://www.instagram.com/" target="_blank" class="fa fa-instagram"></a>
+          <a href="https://twitter.com/" target="_blank" class="fa fa-twitter"></a>
+          <a href="https://www.youtube.com/" target="_blank" class="fa fa-youtube"></a>
         </div>
       </div>
     </div>
@@ -149,7 +149,7 @@
     </div>
   </footer>
   <button class="volver-arriba">
-    <a href="historias.html" class="estilo-boton">Volver arriba</a>
+    <a href="#" class="estilo-boton">Volver arriba</a>
   </button>
   <!--link JS BT-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
